<resources>
    <string name="app_name">皮蛋记账</string>
    <string name="bottom_bar_main">账单</string>
    <string name="bottom_bar_chart">图表</string>
    <string name="bottom_bar_assets">资产</string>
    <string name="bottom_bar_mine">我的</string>
    <string name="outlay">支出</string>
    <string name="income">收入</string>
    <string name="balance">结余</string>
    <string name="phone">通讯</string>
    <string name="repast">伙食</string>
    <string name="renting">租房</string>
    <string name="user_id">用户ID</string>
    <string name="user_password">用户密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="retrieve_password">找回密码</string>
    <string name="login_password">请输入登录密码</string>
    <string name="login_password_again">再次输入登录密码</string>
    <string name="customer_service">客服</string>
</resources>