<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view_bill_top"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/theme_dart"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/layout_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/layout_outlay"
            app:layout_constraintTop_toTopOf="@id/view_bill_top"
            app:layout_constraintBottom_toBottomOf="@id/view_bill_top">
            <TextView
                android:id="@+id/text_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:layout_weight="1"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/text_income_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:textColor="@color/price_value"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_outlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/layout_income"
            app:layout_constraintEnd_toStartOf="@id/layout_balance"
            app:layout_constraintTop_toTopOf="@id/layout_income"
            app:layout_constraintBottom_toBottomOf="@id/layout_income">
            <TextView
                android:id="@+id/text_outlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outlay"
                android:layout_weight="1"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/text_outlay_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:textColor="@color/price_value"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/layout_outlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_bill_top"
            app:layout_constraintBottom_toBottomOf="@id/view_bill_top">
            <TextView
                android:id="@+id/text_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:layout_weight="1"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/text_balance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100.22"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:textColor="@color/price_value"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_bill"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/view_bill_top"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>